* chore(daisyui_tooltip.css): update dark mode styles for menu hover * fix(daisyui_tooltip.css): fix background color and remove unnecessary color property

--- a/app/assets/stylesheets/includes/daisyui_tooltip.css
+++ b/app/assets/stylesheets/includes/daisyui_tooltip.css
@@ -207,17 +207,16 @@ dialog button:focus-visible {
     --tw-prose-body: rgb(236, 236, 236);
   }
 }
-.dark {
+:root.dark {
   :root .prose {
     --tw-prose-body: rgb(236, 236, 236);
   }
 }
 
-.dark {
+:root.dark {
   :where(.menu li:not(.menu-title):not(.disabled) > :not(ul):not(details):not(.menu-title)):not(.active):hover,
   :where(.menu li:not(.menu-title):not(.disabled) > details > summary:not(.menu-title)):not(.active):hover {
-    background-color: var(--fallback-bc, oklch(var(--bc) / 0.1)) !important;
-    color: inherit !important;
+    background-color: rgb(59 59 61);
   }
 }
 
